--- a/report/report.tex
+++ b/report/report.tex
@@ -145,9 +145,15 @@ The acknowledgments and the people to thank go here
 
 \section{Introduction}
 
-Online learning
+\subsection{Online learning}
 
-Deterministic/stochastic/adversary
+In the online learning environment, a 'player' has a selection of options that they can choose from. Once an option is selected the environment provides some cost or reward. The player then has a decision whether to continue with the selected option or to try something different. It is usually a good idea to explore the different options available before exploiting the best ones. There has recently been a lot of interest in developing strategies for addressing this exploration vs exploitation.\\
+
+In the simplest scenario, the feedback received is \textbf{deterministic}. In this case if one can explore all of the options available then the full environment is known and there is know more learning needed. A more difficult problem is when the feedback is instead \textbf{stochastic} in nature. At each iteration some feedback on the chosen option provides some further insight into the environment, but the actual outcome will never be known for certain. One can try to figure out the best option at each iteration in order to reduce/maximise the expected cost/reward. Various algorithms have been proposed for the stochastic situation which allow one to place an upper bound on the "regret" (or sometimes Bayesian regret) of the system, where regret is defined as the difference in cost/reward between the chosen options and the optimal option.\\
+
+An even more challenging scenario is when the costs/rewards are \textbf{adversarial}. This situation has stochastically drawn feedback from the envirnoment, but the distributions which the feedback is drawn from is not necessarily the same at each iteration. Amazingly, there are algorithms which, given certain constraints on the environment, can still provide upper bounds on the regret risk. These algorithms keep up their exploration aspect in order to adapt to new optimal solutions arising as the situation changes.
+
+\subsection{Combinatorial bandit}
 
 Combinatorial element and optimization oracle
 
